[package]
name = "rust_action_heroes"
version = "0.1.0"
authors = ["Elijah Voigt <elijah.caine.mv@gmail.com"]
edition = "2018"

[dependencies]
amethyst = { version = "0.15.0", features = ["test-support", "no-slow-safety-checks"] }
amethyst_test = "*"
amethyst_input = "*"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
